--- a/app/src/main/res/drawable/rounded_button_light.xml
+++ b/app/src/main/res/drawable/rounded_button_light.xml
@@ -1,7 +1,7 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
     <solid android:color="@color/secondary_blue" />
-    <corners android:radius="25dp" />
-    <stroke
-        android:width="2dp"
-        android:color="@color/secondary_blue" />
+    <corners android:radius="16dp" />
+
 </shape>
