--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -25,10 +25,20 @@
             android:layout_height="wrap_content"
             android:text="Admin Section"
             android:textColor="@color/primary_blue"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="365dp"
+        android:layout_height="240dp"
+        android:background="@drawable/rounded_card"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        tools:layout_editor_absoluteX="23dp"
+        tools:layout_editor_absoluteY="175dp">
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnGenerateQuizzes"
@@ -61,6 +71,17 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topHeader" />
+
+    <LinearLayout
+        android:layout_width="380dp"
+        android:layout_height="124dp"
+        android:background="@drawable/rounded_card"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        tools:layout_editor_absoluteX="15dp"
+        tools:layout_editor_absoluteY="591dp">
+</LinearLayout>
 
     <Button
         android:id="@+id/btnLogout"
