--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/languageHeader"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="77dp"
         android:background="@color/secondary_blue"
         android:padding="12dp"
         android:orientation="horizontal"
@@ -21,7 +21,7 @@
             android:layout_height="38dp"
             android:layout_marginStart="12dp"
             android:contentDescription="Language logo"
-            android:src="@drawable/javascript_icon" />
+            android:src="@drawable/code_icon2" />
 
         <Spinner
             android:id="@+id/spinnerLanguage"
@@ -82,11 +82,22 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"/>
+
+        <Button
+            android:id="@+id/btnChapter5"
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:text="Chapter 5"
+            android:background="@drawable/rounded_button_dark"
+            android:textColor="@color/text_grey"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="77dp"
         android:background="@color/secondary_blue"
         android:orientation="horizontal"
         android:gravity="center"
