--- a/app/src/main/res/layout/activity_full_quiz_retake.xml
+++ b/app/src/main/res/layout/activity_full_quiz_retake.xml
@@ -70,7 +70,7 @@
         android:text="Submit Quiz"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:backgroundTint="@color/primary_blue"
+        android:background="@drawable/rounded_button_dark"
         android:padding="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
