--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center_horizontal"
     android:background="@color/text_grey">
 
     <TextView
@@ -13,55 +12,70 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:textSize="24sp"
+        android:textSize="40sp"
         android:textColor="@color/primary_blue"
-        android:layout_marginBottom="32dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:fontFamily="sans-serif-medium" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp" />
 
     <EditText
         android:id="@+id/et_email"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Email"
         android:padding="12dp"
         android:backgroundTint="@color/secondary_blue"
         android:textColor="@color/dark_gray"
         android:textColorHint="@color/dark_gray"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_edittext" />
+        android:background="@drawable/rounded_edittext"
+        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp" />
 
     <EditText
         android:id="@+id/et_password"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Password"
-        android:padding="12dp"
         android:inputType="textPassword"
+        android:padding="12dp"
         android:backgroundTint="@color/secondary_blue"
         android:textColor="@color/dark_gray"
         android:textColorHint="@color/dark_gray"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded_edittext" />
+        android:background="@drawable/rounded_edittext"
+        app:layout_constraintTop_toBottomOf="@id/et_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textSize="18sp"
+        android:textColor="@android:color/white"
         android:background="@drawable/rounded_button_dark"
-        android:textColor="@color/white"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintBottom_toTopOf="@id/btn_create_account"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/btn_create_account"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Create Account"
         android:textSize="18sp"
+        android:textColor="@android:color/white"
         android:background="@drawable/rounded_button_dark"
-        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
