--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0f0f0"
+    android:background="#eef0f1"
     tools:context=".Account.MainActivity">
 
     <LinearLayout
         android:id="@+id/login_box"
         android:layout_width="417dp"
         android:layout_height="837dp"
-        android:background="#e6f2ff"
+        android:background="#eef0f1"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,11 +21,13 @@
         app:layout_constraintVertical_bias="0.0">
 
 
-        <ImageView
-            android:id="@+id/logo_image"
-            android:layout_width="255dp"
-            android:layout_height="100dp"
-            android:src="@drawable/robot_logo" />
+        <VideoView
+            android:id="@+id/robot_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:keepScreenOn="true" />
+
 
         <TextView
             android:id="@+id/app_name"
@@ -34,7 +36,7 @@
             android:layout_marginTop="20dp"
             android:letterSpacing="0.1"
             android:text="COGNIBYTE"
-            android:textColor="#003366"
+            android:textColor="@color/primary_blue"
             android:textSize="36sp"
             android:textStyle="bold" />
 
@@ -43,10 +45,10 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:backgroundTint="#b3d9ff"
+            android:backgroundTint="@color/secondary_blue"
             android:padding="10dp"
             android:text="Create Account"
-            android:textColor="#003366"
+            android:textColor="@color/primary_blue"
             android:textSize="18sp" />
 
         <Button
@@ -54,10 +56,10 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:backgroundTint="#b3d9ff"
+            android:backgroundTint="@color/secondary_blue"
             android:padding="10dp"
             android:text="Login"
-            android:textColor="#003366"
+            android:textColor="@color/primary_blue"
             android:textSize="18sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
