--- a/app/src/main/res/layout/activity_skill_level.xml
+++ b/app/src/main/res/layout/activity_skill_level.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#EEF2F5"
-    android:gravity="center_horizontal">
+    android:background="#EEF2F5">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tv_skill_title"
+        android:layout_width="0dp"
         android:layout_height="80dp"
         android:gravity="center"
         android:text="SET SKILL LEVEL"
         android:textSize="26sp"
         android:textStyle="bold"
         android:textColor="#003366"
-        android:background="#b3d9ff" />
+        android:background="#b3d9ff"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Space
+        android:id="@+id/space_top"
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_skill_title"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/layout_seekbar"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@id/space_top"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,22 +66,28 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_intermediate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INTERMEDIATE"
         android:textSize="12sp"
         android:textColor="#003366"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="40dp"
-        android:layout_gravity="center"/>
+        app:layout_constraintTop_toBottomOf="@id/layout_seekbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
+        android:id="@+id/tv_level_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Level Selected:"
         android:textSize="18sp"
         android:textColor="#003366"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_intermediate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/skill_level_display"
@@ -81,24 +97,29 @@
         android:textSize="14sp"
         android:textColor="#003366"
         android:background="#808080"
-        android:padding="12dp"
-        android:layout_marginBottom="40dp"
         android:backgroundTint="#808080"
-        android:gravity="center"/>
+        android:padding="12dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_level_selected"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btn_save_skill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAVE CHANGES"
-        android:textStyle="bold"
-        android:textColor="#b3d9ff"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/rounded_button_background"
         android:backgroundTint="#b3d9ff"
         android:paddingLeft="40dp"
-        android:paddingRight="40dp"
         android:paddingTop="12dp"
+        android:paddingRight="40dp"
         android:paddingBottom="12dp"
-        android:background="@drawable/rounded_button_background"
-        android:layout_marginTop="20dp"/>
+        android:text="SAVE CHANGES"
+        android:textColor="@color/secondary_blue"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
