--- a/app/src/main/res/layout/activity_stats_page.xml
+++ b/app/src/main/res/layout/activity_stats_page.xml
@@ -8,18 +8,15 @@
 
     <LinearLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="77dp"
         android:background="@color/secondary_blue"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/back"
-            android:contentDescription="@string/back" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,34 +29,159 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/filterCard"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Language"
+                android:textColor="#0D2C54"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinnerLanguage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:spinnerMode="dropdown"
+                android:popupBackground="@color/white" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardOverall"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="2dp"
+        app:layout_constraintTop_toBottomOf="@id/filterCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/tvOverallLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Overall Progress"
+                android:textColor="@color/primary_blue"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <ProgressBar
+                android:id="@+id/progressOverall"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="12dp"
+                android:layout_marginTop="8dp"
+                android:max="100"
+                android:progress="0"
+                android:progressTint="@color/primary_blue"
+                android:indeterminate="false" />
+
+            <TextView
+                android:id="@+id/tvOverallPct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="0%"
+                android:textColor="@color/primary_blue"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/btnViewStats"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:text="VIEW STATISTICS"
-        android:textSize="18sp"
-        android:textColor="@color/white"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_button_dark"
-        android:paddingVertical="14dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/header"
+        android:paddingVertical="14dp"
+        android:text="VIEW STATISTICS"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/cardOverall"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btnViewQuizStats"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:text="VIEW QUIZ STATS"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:background="@drawable/rounded_button_dark"
-        android:paddingVertical="14dp"
-        android:gravity="center"
         android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_button_dark"
+        android:gravity="center"
+        android:paddingVertical="14dp"
+        android:text="VIEW QUIZ STATS"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/btnViewStats"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/bottomNav"
+        android:layout_width="0dp"
+        android:layout_height="77dp"
+        android:background="@color/secondary_blue"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/btnHome"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/home"
+            android:layout_marginEnd="40dp"/>
+
+        <ImageView
+            android:id="@+id/btncodeQuiz"
+            android:layout_width="54dp"
+            android:layout_height="56dp"
+            android:src="@drawable/code_icon2"
+            android:layout_marginEnd="40dp"/>
+
+        <ImageView
+            android:id="@+id/btnStats"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/stats"
+            android:layout_marginEnd="40dp"/>
+
+        <ImageView
+            android:id="@+id/btnProfile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/profile"
+            android:layout_marginEnd="20dp"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
