--- a/app/src/main/res/layout/item_manage_language.xml
+++ b/app/src/main/res/layout/item_manage_language.xml
@@ -33,6 +33,6 @@
         android:layout_marginStart="12dp"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/back"
+        android:src="@drawable/x"
         android:contentDescription="Delete"/>
 </LinearLayout>
