--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -3,21 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/text_grey">
-
+    android:background="@color/text_grey"
+    tools:context=".AdminActivity">
 
     <LinearLayout
         android:id="@+id/topHeader"
-        android:layout_width="421dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
         android:background="@color/secondary_blue"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/tvAdmin"
@@ -26,76 +25,64 @@
             android:text="Admin Section"
             android:textColor="@color/primary_blue"
             android:textSize="30sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/middleCard"
+        android:layout_width="365dp"
+        android:layout_height="253dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/rounded_card"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topHeader">
+
+        <Button
+            android:id="@+id/btnGenerateLessons"
+            style="@style/NoTintButton"
+            android:layout_width="260dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button_light"
+            android:text="GO TO CHAPTER SECTION"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
+
+        <Button
+            android:id="@+id/btnGenerateQuizzes"
+            style="@style/NoTintButton"
+            android:layout_width="260dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button_light"
+            android:text="GO TO QUIZ SECTION"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="365dp"
-        android:layout_height="240dp"
-        android:background="@drawable/rounded_card"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="20dp"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="175dp">
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnGenerateQuizzes"
-        style="@style/NoTintButton"
-        android:layout_width="260dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/rounded_button_light"
-        android:text="Go To Quiz Section"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnGenerateLessons" />
-
-    <Button
-        android:id="@+id/btnGenerateLessons"
-        style="@style/NoTintButton"
-        android:layout_width="260dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="116dp"
-        android:background="@drawable/rounded_button_light"
-        android:text="Go To Chapter Section"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topHeader" />
-
-    <LinearLayout
-        android:layout_width="380dp"
-        android:layout_height="124dp"
-        android:background="@drawable/rounded_card"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="20dp"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="591dp">
-</LinearLayout>
-
     <Button
         android:id="@+id/btnLogout"
-        android:layout_width="324dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="244dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/rounded_button_dark"
         android:text="RETURN TO LOGIN"
         android:textColor="@color/text_grey"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnGenerateQuizzes" />
+        app:layout_constraintTop_toBottomOf="@id/middleCard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
