--- a/app/src/main/res/layout/activity_view_quiz_content.xml
+++ b/app/src/main/res/layout/activity_view_quiz_content.xml
@@ -2,19 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_view_quiz_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/text_grey"
-    tools:context=".Admin.ViewQuizContentActivity">
+    android:background="@color/background_light_blue">
 
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/secondary_blue"
+        android:orientation="horizontal"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,97 +25,59 @@
             android:contentDescription="@string/back" />
 
         <TextView
-            android:id="@+id/tvHeaderTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="VIEW QUIZ CONTENT"
+            android:text="View Quiz Content"
             android:textColor="@color/primary_blue"
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/labelLanguage"
+    <LinearLayout
+        android:id="@+id/spinnerContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Select Language"
-        android:paddingStart="16dp"
-        android:paddingTop="12dp"
+        android:background="@drawable/rounded_card"
+        android:orientation="vertical"
+        android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp">
 
-    <Spinner
-        android:id="@+id/spinnerLanguage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/text_grey"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/labelLanguage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Spinner
+            android:id="@+id/spinnerLanguage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/labelSkill"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Select Skill Level"
-        android:paddingStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spinnerLanguage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Spinner
+            android:id="@+id/spinnerSkillLevel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            android:padding="8dp" />
 
-    <Spinner
-        android:id="@+id/spinnerSkillLevel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/text_grey"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/labelSkill"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Spinner
+            android:id="@+id/spinnerChapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/labelChapter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Select Chapter"
-        android:paddingStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spinnerSkillLevel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Spinner
-        android:id="@+id/spinnerChapter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/text_grey"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/labelChapter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/labelLesson"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Select Lesson"
-        android:paddingStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spinnerChapter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Spinner
-        android:id="@+id/spinnerLesson"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/text_grey"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/labelLesson"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Spinner
+            android:id="@+id/spinnerLesson"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            android:padding="8dp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnSelect"
@@ -128,68 +87,112 @@
         android:textStyle="bold"
         android:backgroundTint="@color/primary_blue"
         android:textColor="@color/white"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spinnerLesson"
+        android:layout_marginHorizontal="32dp"
+        app:layout_constraintTop_toBottomOf="@id/spinnerContainer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
 
-    <TextView
-        android:id="@+id/tvQuizContentTitle"
+    <LinearLayout
+        android:id="@+id/questionCard"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Quiz Content"
-        android:textColor="@color/primary_blue"
-        android:textStyle="bold"
-        android:paddingStart="16dp"
+        android:layout_height="200dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_card"
+        android:orientation="vertical"
+        android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/btnSelect"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvQuestions"
-        android:layout_width="398dp"
-        android:layout_height="188dp"
-        android:background="@color/text_grey"
-        android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/layoutEditSave"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        <ScrollView
+            android:id="@+id/scrollViewQuestion"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/tvSingleQuestion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top|start"
+                android:hint="Question and options will appear here"
+                android:textColor="@color/primary_blue"
+                android:textSize="16sp"
+                android:background="@android:color/transparent"
+                android:enabled="false"
+                android:inputType="textMultiLine"
+                android:minLines="12"
+                android:maxLines="30"
+                android:scrollbars="vertical" />
+        </ScrollView>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/layoutNavButtons"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/questionCard"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvQuizContentTitle"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/btnPreviousQuestion"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="Previous"
+            android:backgroundTint="@color/primary_blue"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnNextQuestion"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:text="Next"
+            android:backgroundTint="@color/primary_blue"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layoutEditSave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:gravity="center"
+        android:layout_margin="32dp"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btnEditQuiz"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/primary_blue"
             android:text="Edit"
+            android:backgroundTint="@color/primary_blue"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnSaveQuiz"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/primary_blue"
             android:text="Save"
+            android:backgroundTint="@color/primary_blue"
             android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
